--- a/cep.css
+++ b/cep.css
@@ -1,6 +1,6 @@
 body{
     margin: 0;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 14px;
     direction: ltr;
     background-color: lightcyan;
@@ -55,7 +55,10 @@ button:hover, button:active{
     color: black;
 }
 
-button:active
+button:active{
+    background-color: rgb(145, 145, 28);
+    color: black;
+}
 
 
 
